kubernetes/fed-mgr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fed-mgr
  name: fed-mgr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fed-mgr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: fed-mgr
    spec:
      containers:
        - env:
            - name: AUTHN_MODE
              valueFrom:
                configMapKeyRef:
                  name: fed-mgr-cm0
                  key: authn_mode
            - name: AUTHZ_MODE
              valueFrom:
                configMapKeyRef:
                  name: fed-mgr-cm0
                  key: authz_mode
            - name: DB_URL
              valueFrom:
                configMapKeyRef:
                  name: fed-mgr-cm0
                  key: db_url
            - name: OPA_AUTHZ_URL
              valueFrom:
                configMapKeyRef:
                  name: fed-mgr-cm0
                  key: opa_url
          image: harbor.cloud.infn.it/datacloud-middleware/fed-mgr:kompose-python3.12
          name: fed-mgr
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/health
              scheme: HTTP
              port: 80
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/health
              scheme: HTTP
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always
