kubernetes/opa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: opa
  name: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: opa
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: opa
    spec:
      containers:
        - args:
            - run
            - --server
            - --log-level
            - debug
            - --addr
            - 0.0.0.0:8181
            - /fed_mgr/data.json
            - /fed_mgr/policy.rego
          image: openpolicyagent/opa
          name: opa
          ports:
            - containerPort: 8181
              protocol: TCP
          volumeMounts:
            - mountPath: /fed_mgr
              name: opa-cm0
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: 8181
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?bundle=true # Include bundle activation in readiness
              scheme: HTTP
              port: 8181
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always
      volumes:
        - configMap:
            name: opa-cm0
            items:
              - key: data.json
                path: data.json
              - key: policy.rego
                path: policy.rego
          name: opa-cm0
